--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "author": "Abhishek",
   "license": "ISC",
   "dependencies": {
-    "nodemon": "^3.1.11"
+    "-": "^0.0.1",
+    "D": "^1.0.0",
+    "nodemon": "^3.1.11",
+    "prettier": "^3.6.2"
   }
 }
