connect to mongoAtlas

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon --exec node --experimental-json-modules src/index.js"
   },
   "keywords": [
     "javaScript",
@@ -14,8 +14,9 @@
   "author": "Abhishek",
   "license": "ISC",
   "dependencies": {
-    "-": "^0.0.1",
-    "D": "^1.0.0",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "mongoose": "^8.20.1",
     "nodemon": "^3.1.11",
     "prettier": "^3.6.2"
   }
