--- a/.envsample
+++ b/.envsample
@@ -1,3 +1,7 @@
 PORT = 8000
 MONGODB_URI=mongodb+srv://Abhishek:Abhishek123@cluster0.nen9lmm.mongodb.net/?appName=Cluster0
 CORS_ORIGIN=*
+ACCESS_TOKEN_SECRET=AdhafasdkasgxasfxugASsyGHFHFQxvahxfAGXVSXJvzx
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET=dsfjhgsfjbvsjhgsdbvsjcgdcfvdcvnsdvjfdsbsdhkf 
+REFRESH_TOKEN_EXPIRY=10D
